--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ body {
     display: flex;
     align-items: end;
     justify-content: right;
+    overflow-wrap: anywhere;
+    line-height: 1em;
+    margin-bottom: 3%;
+    overflow-y: hidden;
 }
 
 .container input[type="button"] {
